--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ h1 {
 }
 
 
-#intern {
+#intern{ /* Internship list*/
   display: none;
   list-style: none;
   padding: 0;
@@ -95,7 +95,11 @@ h1 {
   width: 100%;
   max-width: 90%;
 }
-ul {
+#ddl{
+  cursor: pointer;
+}
+
+ul /* list */{
   list-style: none;
   padding: 0;
   text-align: center;              
@@ -139,6 +143,7 @@ p {
   margin: 0.5rem 0;
   line-height: 1.5;
 }
+
 
 #clickable {
   cursor: pointer;
