--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,7 @@ li {
   fill: var(--font-color);
 }
 .bio-list li {
-  font-size: 1.5vw;
+  font-size: clamp(1.3rem, 1vw, 1.4rem);
 }
 
 #theme-switch svg:first-child  { display: none; } 
